tests/paczka1/small_fuzzy/66849531.err
Error in line 5: kQbVK70sr A116 8,1
Error in line 13: 5PWyL73UoIP A116 40,1
Error in line 14: 5PWyL73UoIP S964 67,0
